--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,103 @@
                 </div>
             </div>
         </section>
+        <section id="contact-form">
+            <div class="content">
+                <h3>Still have question?</h3>
+                <p>If you have any questions we would love to hear from you! Fill out our contact form or email us at: contrologystudio.sydney@gmail.com. We will endeavour to get back to you within 24 hours.</p>
+            </div>
+
+            <!-- The form structure starts here -->
+            <form action="https://formsubmit.co/contrologystudio.sydney@gmail.com" method="POST">
+
+                <div>Name <span class="comment">(required)</span></div>
+                <div class="form-group pull-up">
+                    <div class="half-width">
+                        <label for="first-name">First Name</label><br />
+                        <input type="text" id="first-name" name="first_name" required><br>
+                    </div>
+                    <!-- Labels added here -->
+                    <div class="half-width">
+                        <label for="last-name">Last Name</label><br />
+                        <input type="text" id="last-name" name="last_name" required>
+                    </div>
+                </div>                
+
+                <div>
+                    <label for="email">Email <span class="comment">(required)</span></label><br />
+                    <input type="email" id="email" name="email" required>
+                </div>
+
+                <div>
+                    <label for="phone">Phone</label><br />
+                    <input type="tel" id="phone" name="phone">
+                </div>
+
+                <div>
+                    <label>Whats your enquiry about?</label>
+                    <div class="form-group options">
+                        <!-- Checkbox fields -->
+                        <label>
+                            <input type="checkbox" id="physio" name="enquiry_type" value="Physio">
+                            <span class="custom-checkmark"></span>
+                            Physio
+                        </label>
+                        <label>
+                            <input type="checkbox" id="pelvic-floor" name="enquiry_type" value="Pelvic-Floor">
+                            <span class="custom-checkmark"></span>
+                            Pelvic Floor
+                        </label>
+                        <label>
+                            <input type="checkbox" id="pilates" name="enquiry_type" value="Pilates">
+                            <span class="custom-checkmark"></span>
+                            Pilates
+                        </label>
+                        <label>
+                            <input type="checkbox" id="pregnancy" name="enquiry_type" value="Pregnancy">
+                            <span class="custom-checkmark"></span>
+                            Pregnancy
+                        </label>
+                        <label>
+                            <input type="checkbox" id="postnatal" name="enquiry_type" value="Postnatal">
+                            <span class="custom-checkmark"></span>
+                            Postnatal
+                        </label>
+                        <label>
+                            <input type="checkbox" id="dietetics" name="enquiry_type" value="Dietetics">
+                            <span class="custom-checkmark"></span>
+                            Dietetics
+                        </label>
+                        <label>
+                            <input type="checkbox" id="counselling" name="enquiry_type" value="Counselling">
+                            <span class="custom-checkmark"></span>
+                            Counselling
+                        </label>
+                        <label>
+                            <input type="checkbox" id="exercise-physiology" name="enquiry_type" value="Exercise Physiology">
+                            <span class="custom-checkmark"></span>
+                            Exercise Physiology
+                        </label>
+                        <label>
+                            <input type="checkbox" id="massage" name="enquiry_type" value="Massage">
+                            <span class="custom-checkmark"></span>
+                            Massage
+                        </label>
+                        <label>
+                            <input type="checkbox" id="other" name="enquiry_type" value="Other">
+                            <span class="custom-checkmark"></span>
+                            Other
+                        </label>
+                    </div>
+                </div>
+
+                <div>
+                    <label for="message">Message <span class="comment">(required)</span></label> <br />
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+        
+                <div id="submit-button"><button type="submit">Submit</button></div>
+            </form>
+        </section>
         <!-- The Modal popup for wechat -->
         <div id="wechat-modal" class="modal">
             <div id="wechat-modal-content">
@@ -110,7 +207,7 @@
     </main>
     <footer>
         <div class="copyright-area">
-            Copyright &copy; 2024-2025 <a href="index.html">Contrology Studio</a>
+            Copyright &copy; 2024-2026 <a href="index.html">Contrology Studio</a>
         </div>
     </footer>
 </body>
