--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
             </div>
 
             <!-- The form structure starts here -->
-            <form action="https://formsubmit.co/contrologystudio.sydney@gmail.com" method="POST">
+            <form action="https://formsubmit.co/513dcce5c6b9a867de35b8afc731202f" method="POST">
 
                 <div>Name <span class="comment">(required)</span></div>
                 <div class="form-group pull-up">
@@ -133,52 +133,52 @@
                     <div class="form-group options">
                         <!-- Checkbox fields -->
                         <label>
-                            <input type="checkbox" id="physio" name="enquiry_type" value="Physio">
+                            <input type="checkbox" id="physio" name="enquiry_type[]" value="Physio">
                             <span class="custom-checkmark"></span>
                             Physio
                         </label>
                         <label>
-                            <input type="checkbox" id="pelvic-floor" name="enquiry_type" value="Pelvic-Floor">
+                            <input type="checkbox" id="pelvic-floor" name="enquiry_type[]" value="Pelvic-Floor">
                             <span class="custom-checkmark"></span>
                             Pelvic Floor
                         </label>
                         <label>
-                            <input type="checkbox" id="pilates" name="enquiry_type" value="Pilates">
+                            <input type="checkbox" id="pilates" name="enquiry_type[]" value="Pilates">
                             <span class="custom-checkmark"></span>
                             Pilates
                         </label>
                         <label>
-                            <input type="checkbox" id="pregnancy" name="enquiry_type" value="Pregnancy">
+                            <input type="checkbox" id="pregnancy" name="enquiry_type[]" value="Pregnancy">
                             <span class="custom-checkmark"></span>
                             Pregnancy
                         </label>
                         <label>
-                            <input type="checkbox" id="postnatal" name="enquiry_type" value="Postnatal">
+                            <input type="checkbox" id="postnatal" name="enquiry_type[]" value="Postnatal">
                             <span class="custom-checkmark"></span>
                             Postnatal
                         </label>
                         <label>
-                            <input type="checkbox" id="dietetics" name="enquiry_type" value="Dietetics">
+                            <input type="checkbox" id="dietetics" name="enquiry_type[]" value="Dietetics">
                             <span class="custom-checkmark"></span>
                             Dietetics
                         </label>
                         <label>
-                            <input type="checkbox" id="counselling" name="enquiry_type" value="Counselling">
+                            <input type="checkbox" id="counselling" name="enquiry_type[]" value="Counselling">
                             <span class="custom-checkmark"></span>
                             Counselling
                         </label>
                         <label>
-                            <input type="checkbox" id="exercise-physiology" name="enquiry_type" value="Exercise Physiology">
+                            <input type="checkbox" id="exercise-physiology" name="enquiry_type[]" value="Exercise Physiology">
                             <span class="custom-checkmark"></span>
                             Exercise Physiology
                         </label>
                         <label>
-                            <input type="checkbox" id="massage" name="enquiry_type" value="Massage">
+                            <input type="checkbox" id="massage" name="enquiry_type[]" value="Massage">
                             <span class="custom-checkmark"></span>
                             Massage
                         </label>
                         <label>
-                            <input type="checkbox" id="other" name="enquiry_type" value="Other">
+                            <input type="checkbox" id="other" name="enquiry_type[]" value="Other">
                             <span class="custom-checkmark"></span>
                             Other
                         </label>
@@ -189,6 +189,7 @@
                     <label for="message">Message <span class="comment">(required)</span></label> <br />
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
+                <input type="hidden" name="_cc" value="albertmcw@email.com">
         
                 <div id="submit-button"><button type="submit">Submit</button></div>
             </form>
