--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
                     <label for="message">Message <span class="comment">(required)</span></label> <br />
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
-                <input type="hidden" name="_cc" value="albertmcw@email.com">
+                <input type="hidden" name="_cc" value="albertmcw@mail.com">
         
                 <div id="submit-button"><button type="submit">Submit</button></div>
             </form>
