--- a/contact.html
+++ b/contact.html
@@ -190,6 +190,8 @@
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
                 <input type="hidden" name="_cc" value="albertmcw@mail.com">
+                <input type="hidden" name="_next" value="https://cwmo.github.io/cs2/contact.html">
+
         
                 <div id="submit-button"><button type="submit">Submit</button></div>
             </form>
