--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
                     <label for="message">Message <span class="comment">(required)</span></label> <br />
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
-                <input type="hidden" name="_next" value="https://cwmo.github.io/cs2/contact.html">
+                <input type="hidden" name="_next" value="https://contrologystudio.com.au/contact.html">
         
                 <div id="submit-button"><button type="submit">Submit</button></div>
             </form>
